using Grpc.Net.Client;
using Demo;
using Google.Protobuf.WellKnownTypes;
using Grpc.Core;
using System.Diagnostics;

namespace GrpcClientStressTest;

class Program
{
    private static GrpcDemoService.GrpcDemoServiceClient? _client;
    private static readonly string ServerUrl = "https://localhost:5001";
    private static readonly string StressTestId = $"StressTest-{Random.Shared.Next(100, 999)}";

    static async Task Main(string[] args)
    {
        Console.ForegroundColor = ConsoleColor.Red;
        Console.WriteLine($"‚ö° Client Stress Test gRPC - {StressTestId}");
        Console.WriteLine("==============================================");
        Console.ResetColor();

        try
        {
            // Configure gRPC client
            using var channel = GrpcChannel.ForAddress(ServerUrl, new GrpcChannelOptions
            {
                HttpHandler = new HttpClientHandler()
                {
                    ServerCertificateCustomValidationCallback = 
                        HttpClientHandler.DangerousAcceptAnyServerCertificateValidator
                }
            });

            _client = new GrpcDemoService.GrpcDemoServiceClient(channel);

            Console.ForegroundColor = ConsoleColor.Green;
            Console.WriteLine($"‚úÖ {StressTestId} connected to server: {ServerUrl}");
            Console.ResetColor();

            // Stress test menu
            await ShowStressTestMenu();
        }
        catch (Exception ex)
        {
            Console.ForegroundColor = ConsoleColor.Red;
            Console.WriteLine($"‚ùå Connection error: {ex.Message}");
            Console.ResetColor();
        }

        Console.WriteLine("\nAppuyez sur une touche pour quitter...");
        Console.ReadKey();
    }

    static async Task ShowStressTestMenu()
    {
        while (true)
        {
            Console.Clear();
            Console.ForegroundColor = ConsoleColor.Red;
            Console.WriteLine("‚ö° MENU STRESS TEST gRPC");
            Console.WriteLine("========================");
            Console.ResetColor();
            Console.WriteLine("1. üöÄ Stress Test Unary (100 rapid calls)");
            Console.WriteLine("2. üì§ Stress Test Client Streaming (Massive upload)");
            Console.WriteLine("3. üîÑ Stress Test Bidirectional (Intensive chat)");
            Console.WriteLine("4. üéØ Complete Stress Test (All patterns)");
            Console.WriteLine("0. ‚ùå Exit");
            Console.WriteLine();

            Console.Write("Your choice: ");
            var choice = Console.ReadLine();

            switch (choice)
            {
                case "1":
                    await StressTestUnary();
                    break;
                case "2":
                    await StressTestClientStreaming();
                    break;
                case "3":
                    await StressTestBidirectional();
                    break;
                case "4":
                    await StressTestComplete();
                    break;
                case "0":
                    return;
                default:
                    Console.WriteLine("‚ùå Choix invalide. Press any key to continue...");
                    Console.ReadKey();
                    break;
            }
        }
    }

    static async Task StressTestUnary()
    {
        Console.Clear();
        Console.ForegroundColor = ConsoleColor.Yellow;
        Console.WriteLine("üöÄ STRESS TEST UNARY - 100 rapid calls");
        Console.WriteLine("==========================================");
        Console.ResetColor();

        var stopwatch = Stopwatch.StartNew();
        var tasks = new List<Task<UnaryResponse>>();

        Console.WriteLine("üì§ Sending 100 simultaneous unary calls...");

        for (int i = 1; i <= 100; i++)
        {
            var request = new UnaryRequest
            {
                Message = $"Stress test message {i}",
                ClientId = Environment.ProcessId,
                Timestamp = DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss.fff")
            };

            tasks.Add(_client!.UnaryCallAsync(request).ResponseAsync);
        }

        var responses = await Task.WhenAll(tasks);
        stopwatch.Stop();

        Console.ForegroundColor = ConsoleColor.Green;
        Console.WriteLine($"‚úÖ Stress test completed!");
        Console.WriteLine($"   üìä {responses.Length} responses received");
        Console.WriteLine($"   ‚è±Ô∏è  Total time: {stopwatch.ElapsedMilliseconds}ms");
        Console.WriteLine($"   üìà Average: {stopwatch.ElapsedMilliseconds / (double)responses.Length:F2}ms per call");
        Console.ResetColor();

        Console.WriteLine("\nPress any key to continue...");
        Console.ReadKey();
    }

    static async Task StressTestClientStreaming()
    {
        Console.Clear();
        Console.ForegroundColor = ConsoleColor.Yellow;
        Console.WriteLine("üì§ STRESS TEST CLIENT STREAMING - Massive upload");
        Console.WriteLine("===============================================");
        Console.ResetColor();

        var stopwatch = Stopwatch.StartNew();

        try
        {
            using var call = _client!.ClientStreaming();
            
            Console.WriteLine("üì§ Sending 50 streaming messages...");

            for (int i = 1; i <= 50; i++)
            {
                var request = new StreamingRequest
                {
                    Message = $"Stress test message {i} - Massive data: {new string('X', 100)}",
                    SequenceNumber = i,
                    ClientId = StressTestId
                };

                await call.RequestStream.WriteAsync(request);
                
                if (i % 10 == 0)
                {
                    Console.WriteLine($"   üì§ {i}/50 messages sent...");
                }
            }

            await call.RequestStream.CompleteAsync();
            
            Console.WriteLine("üîÑ Waiting for final response...");
            var response = await call;
            
            stopwatch.Stop();

            Console.ForegroundColor = ConsoleColor.Green;
            Console.WriteLine($"‚úÖ Massive upload completed!");
            Console.WriteLine($"   üìä Response: {response.Response}");
            Console.WriteLine($"   ‚è±Ô∏è  Total time: {stopwatch.ElapsedMilliseconds}ms");
            Console.ResetColor();
        }
        catch (Exception ex)
        {
            Console.ForegroundColor = ConsoleColor.Red;
            Console.WriteLine($"‚ùå Erreur: {ex.Message}");
            Console.ResetColor();
        }

        Console.WriteLine("\nPress any key to continue...");
        Console.ReadKey();
    }

    static async Task StressTestBidirectional()
    {
        Console.Clear();
        Console.ForegroundColor = ConsoleColor.Yellow;
        Console.WriteLine("üîÑ STRESS TEST BIDIRECTIONAL - Intensive chat");
        Console.WriteLine("============================================");
        Console.ResetColor();

        try
        {
            using var call = _client!.BidirectionalStreaming();
            
            // D√©marrer la r√©ception
            var receiveTask = Task.Run(async () =>
            {
                var messageCount = 0;
                await foreach (var response in call.ResponseStream.ReadAllAsync())
                {
                    messageCount++;
                    if (messageCount % 10 == 0)
                    {
                        Console.ForegroundColor = ConsoleColor.Cyan;
                        Console.WriteLine($"üì® {messageCount} responses received...");
                        Console.ResetColor();
                    }
                }
            });

            // Send many messages
            Console.WriteLine("üì§ Sending 30 bidirectional messages...");
            
            for (int i = 1; i <= 30; i++)
            {
                var request = new StreamingRequest
                {
                    Message = $"Message intensif {i} - {DateTime.Now:HH:mm:ss.fff}",
                    SequenceNumber = i,
                    ClientId = StressTestId
                };

                await call.RequestStream.WriteAsync(request);
                await Task.Delay(50); // Petit d√©lai pour √©viter de surcharger
            }

            await call.RequestStream.CompleteAsync();
            await receiveTask;

            Console.ForegroundColor = ConsoleColor.Green;
            Console.WriteLine("‚úÖ Bidirectional stress test completed!");
            Console.ResetColor();
        }
        catch (Exception ex)
        {
            Console.ForegroundColor = ConsoleColor.Red;
            Console.WriteLine($"‚ùå Erreur: {ex.Message}");
            Console.ResetColor();
        }

        Console.WriteLine("\nPress any key to continue...");
        Console.ReadKey();
    }

    static async Task StressTestComplete()
    {
        Console.Clear();
        Console.ForegroundColor = ConsoleColor.Red;
        Console.WriteLine("üéØ COMPLETE STRESS TEST - All patterns");
        Console.WriteLine("==========================================");
        Console.ResetColor();

        Console.WriteLine("‚è≥ Starting complete stress test in 3 seconds...");
        await Task.Delay(3000);

        var stopwatch = Stopwatch.StartNew();

        // 1. Stress Test Unary
        Console.WriteLine("\n1Ô∏è‚É£  Stress Test Unary...");
        await StressTestUnary();

        // 2. Stress Test Client Streaming
        Console.WriteLine("\n2Ô∏è‚É£  Stress Test Client Streaming...");
        await StressTestClientStreaming();

        // 3. Stress Test Bidirectional
        Console.WriteLine("\n3Ô∏è‚É£  Stress Test Bidirectional...");
        await StressTestBidirectional();

        stopwatch.Stop();

        Console.ForegroundColor = ConsoleColor.Green;
        Console.WriteLine($"\nüéâ COMPLETE STRESS TEST FINISHED!");
        Console.WriteLine($"   ‚è±Ô∏è  Total time: {stopwatch.ElapsedMilliseconds}ms");
        Console.ResetColor();

        Console.WriteLine("\nPress any key to return to menu...");
        Console.ReadKey();
    }
}
